fix missed renames
git-svn-id: https://svn.ci.uchicago.edu/svn/koa/backend/trunk/source/pygt@6270 586bcce5-c352-484d-a778-6440de3ad389

--- a/README
+++ b/README
@@ -2,18 +2,18 @@ Library wrapping Globus Toolkit. This is intentionally written by hand and not
 with SWIG, to make it easy to develop and audit the specific functionality
 required by GO.
 
-Currently only support the loading and verifying certificate chains and proxy
+Currently only supports the loading and verifying certificate chains and proxy
 files, by wrapping globus_gsi_credential. For example:
 
-    import gt
+    import glopy
 
-    c = gt.Credential()
+    c = glopy.Credential()
     c.load_cert_file("/tmp/x509up_u1000")
     print "subject =", c.get_subject()
     print "goodtill =", c.get_goodtill()
     try:
         c.verify_chain()
-    except gt.error as e:
+    except glopy.error as e:
         print "Verify Failed:", str(e)
     else:
         print "Verify OK"
