add build instructions to README
git-svn-id: https://svn.ci.uchicago.edu/svn/koa/backend/trunk/source/pygt@6775 586bcce5-c352-484d-a778-6440de3ad389

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+USAGE
+
 Library wrapping Globus Toolkit. This is intentionally written by hand and not
 with SWIG, to make it easy to develop and audit the specific functionality
 required by GO.
@@ -24,7 +26,35 @@ it understands proxy certificates.
 
 A single credential object can be re-used to load and verify many certificates
 and proxies, from files and from strings, within a single thread. However it is
-not thread safe, so each thread should have it's own object.
+NOT THREAD SAFE, so each thread should have it's own object.
+
+
+BUILDING
+
+Globus Toolkit 5.0 or 5.2 (5.1.X) is required.
+
+The build script uses vanilla distutils. To build and install, run this
+(probably as root):
+
+$ export GLOBUS_LOCATION=/usr/local/globus GLOBUS_FLAVOR=gcc64dbg
+$ python setup.py install
+
+For GT 5.2, set your environment like this:
+
+GLOBUS_LOCATION=/usr
+GLOBUS_FLAVOR=
+
+If using the debian packages for 5.2, install:
+  libglobus-gss-assist-dev
+  libglobus-gsi-credential-dev
+
+this list may not be complete - try installing this as well if that fails:
+  globus-gsi-cert-utils-progs
+  globus-proxy-util
+
+
+For GT 5.0, set GLOBUS_LOCATION and GLOBUS_FLAVOR to the values used when
+you installed globus toolkit.
 
 Note: There are currently lots of warnings from gt header files. It would
 be nice to fix these, I may be including a header twice.
